--- a/front/admin/template/index.html
+++ b/front/admin/template/index.html
@@ -55,6 +55,7 @@
 
 
     <script src="../js/vue.js"></script>
+    <script src="../js/config.js"></script>
     <script src="../js/main.js"></script>
     <script>
         new Vue({
